# the-gaffer-football-tactical-ai

./: .env.example  .gitignore  Makefile  README.md  engineering_roadmap.md  gaffer_blueprint.md  pyproject.toml
app/: gradio_app.py
data/: formation_templates.json
data/calibration/: arsenal_newcastle_highlights.json  ronaldo_goal.json  tactical_playlist_1.json
docs/: FINETUNING.md  TRACKING_NOTES.md  V2_PRODUCT_REVIEW.md
evaluation/: __init__.py  clip_runner.py  evaluate_ball_tracking.py  evaluate_episodes.py  evaluate_events.py  evaluate_networks.py  evaluation_report.md  generate_report.py
evaluation/_cache/: arsenal_newcastle_highlights__v1.0.json  arsenal_newcastle_highlights__v2.0.json  tactical_playlist_1__v1.0.json  tactical_playlist_1__v2.0.json
gaffer/: config.py  pipeline.py
gaffer/analysis/: pipeline_runner.py
gaffer/analyst/: answer_generator.py  clip_finder.py  commentary.py  commentary_video.py  evidence.py  explorer_data.py  highlight_reel.py  match_bundle.py  (+5 more)
notebooks/: 01_yolo_test.ipynb  02_team_assignment.ipynb  02_visual_validation.ipynb  03_bytetrack.ipynb  03_tracking.ipynb  04_finetune_yolo.ipynb  05_homography.ipynb
scripts/: ab_compare_detectors.py  ask_gaffer.py  collect_calibration.py  commentate.py  day0_verify.py  download_clip.py  export_openvino.py  find_clip.py  generate_pitch_template.py  render_analytics_demo.py  render_ball_demo.py  render_commentary_video.py  render_highlight_reel.py  render_minimap.py  setup_ollama.py  tracking_audit.py  train_detector.py  validate_homography_propagation.py
tests/: conftest.py
(+58 files in other folders)
