[project]
name = "gaffer"
version = "0.1.0"
description = "Local Football Tactical AI Analyst"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0,<9.0.0",
    "supervision>=0.24.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "ollama>=0.2.0",
    "gradio>=4.40.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "openvino>=2024.0.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "yt-dlp>=2024.9.1",
    "shapely>=2.0.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "trackers>=2.4.0",
    "pyttsx3>=2.99",          # offline TTS (Windows SAPI5) for commentary audio
    "imageio-ffmpeg>=0.6.0",  # bundled static ffmpeg binary -- mux commentary audio onto video
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
